Fix misalignment of d3 graph

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
 	background-color: white !important;
 	font-size: 100px;
-	overflow-y: hidden;
+	/*overflow-y: hidden;*/
 }
 body > .grid {
 	height: 100%;
